@@ -122,6 +122,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #5148: Ignore 'U' in mode given to gzip.open() and gzip.GzipFile().
+
 - Issue #16220: wsgiref now always calls close() on an iterable response.
   Patch by Brent Tubbs.
 
